samples/_failures_safe/1761215685_5d0512_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2465a057.c: In function ‘print_stats’:
./samples/SAFE/__tmp_2465a057.c:121:5: error: expected declaration or statement at end of input
  121 |     }
      |     ^
